[gd_scene load_steps=3 format=2]

[ext_resource path="res://pawns/Arrow.gd" type="Script" id=3]
[ext_resource path="res://pawns/Arrow.tscn" type="PackedScene" id=4]

[node name="Arrows" type="Node2D"]
script = ExtResource( 3 )
__meta__ = {
"_edit_lock_": true
}

[node name="Arrow_Up" parent="." instance=ExtResource( 4 )]

[node name="Arrow_Down" parent="." instance=ExtResource( 4 )]
pointsTo = 1

[node name="Arrow_Left" parent="." instance=ExtResource( 4 )]
pointsTo = 2

[node name="Arrow_Right" parent="." instance=ExtResource( 4 )]
pointsTo = 3
